k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels: 
        app: my-app
    spec:
      containers:
      - name: idpv1
        image: mananqayasdev/idp:v1
        ports:
        - containerPort: 5000
