k8s/srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-srv
spec:
  selector:
    app: my-app
  ports:
  - port: 8080
    targetPort: 5000
  type: ClusterIP
